// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 ihnaIG"
    id={null}
    rows={null}
  >
    <button
      className="Picker__Swatch-sc-1xwpkqn-0 hfRfD"
      color="jobs"
      height="1.5rem"
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-0 bUEePg"
      color="bi"
      height="1.5rem"
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-0 hWtagI"
      color="research"
      height="1.5rem"
      width="1.5rem"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
        color={null}
        data-icon="check"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
    <button
      className="Picker__Swatch-sc-1xwpkqn-0 bNMEdx"
      color="brand1"
      height="1.5rem"
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-0 lgJFKl"
      color="brand2"
      height="1.5rem"
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-0 cZtFka"
      color="brand3"
      height="1.5rem"
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-0 iJLkgL"
      color="brand4"
      height="1.5rem"
      width="1.5rem"
    />
  </section>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
    id={null}
    rows={null}
  >
    <button
      className="Picker__Swatch-sc-1xwpkqn-0 hfRfD"
      color="jobs"
      height="1.5rem"
      onClick={[Function]}
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-0 hWtagI"
      color="research"
      height="1.5rem"
      onClick={[Function]}
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-0 bUEePg"
      color="bi"
      height="1.5rem"
      onClick={[Function]}
      width="1.5rem"
    />
  </section>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
    id={null}
    rows={null}
  >
    <button
      className="Picker__Swatch-sc-1xwpkqn-0 lnZlyP"
      color="jobs"
      height="1.5rem"
      onClick={[Function]}
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-0 ePTUYQ"
      color="research"
      height="1.5rem"
      onClick={[Function]}
      width="1.5rem"
    />
    <button
      className="Picker__Swatch-sc-1xwpkqn-0 jIyesk"
      color="bi"
      height="1.5rem"
      onClick={[Function]}
      width="1.5rem"
    />
  </section>
</div>
`;
